# Can_damonium

./: .gitignore  CMakeLists.txt  PHASE_2_COMPLETION_SUMMARY.md  PHASE_2_VISUAL_OVERVIEW.md  PLUGIN_LAUNCH_VERIFICATION.md  PROJECT_STATUS_PHASE1_COMPLETE.md  QUICK_REFERENCE_PHASE2.md  README.md  RESPONSIVE_UI_COMPLETE.md  RESPONSIVE_UI_SESSION_SUMMARY.md  SECURITY.md  SESSION_2026_02_03.md  SESSION_COMPLETE.md  STANDALONE_TEST_QUICK_REFERENCE.md  UI_RENDERING_FIX.md
Standalone Plugin/: 1073_pre.exe.recipe  NewProject.exe.recipe
Standalone Plugin/1073_pre.68FE6EE3.tlog/: 1073_pre_StandalonePlugin.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Standalone Plugin/NewProje.68FE6EE3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  NewProject_StandalonePlugin.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
docs/: AFTER_RECORDING_NEXT_STEPS.md  AUDIO_DEBUGGING_PROTOCOL.md  BUILD_AND_RECORD_GUIDE.md  BUILD_COMPLETION_20250203.md  BUILD_PROGRESS_20260203.md  CONVOLUTION_COMPARISON.md  CONVOLUTION_NEXT_STEPS.md  DOCUMENTATION_INDEX.md  FILE_MANIFEST.md  FLAVOR_ROADMAP.md  IR_STANDARD.md  MVP_PLAN.md  MVP_WORKFLOW.md  NEXT_TASK.md  PHASE_2_UI_COMPLETE.md  PHASE_2_VST3_MVP.md  PROJECT_COMPLETE.md  PROJECT_TREE.md  QUICK_REFERENCE.md  READY_TO_RECORD.md  RECORDER_APP_COMPLETE.md  RECORDING_CHECKLIST.md  RECORDING_CHECKLIST_SINGLE_IR.md  RESPONSIVE_UI_ARCHITECTURE.md  RESPONSIVE_UI_IMPLEMENTATION.md  REVISION_SUMMARY.md  SESSION_LOGS.md  SHIP_READY_ROADMAP.md  STANDALONE_AUDIO_TESTING.md  START_HERE.md  STATUS_MVP_READY.md  UI_CUSTOMIZATION_GUIDE.md
src/common/: Constants.h
src/plugin/: CMakeLists.txt  ConvolutionEngine.cpp  ConvolutionEngine.h  DebugUIComponent.h  HostServices.h  IRLibrary.cpp  IRLibrary.h  IRLibraryManager.cpp  IRLibraryManager.h  Main.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StandaloneAccess.cpp  StandaloneAccess.h  TestToneGenerator.h
src/profiler/: CMakeLists.txt  IRProcessor.cpp  IRProcessor.h  IRRecorder.cpp  IRRecorder.h  Main.cpp  ProfilerComponent.cpp  ProfilerComponent.h  ProfilerWindow.cpp  ProfilerWindow.h  TestSignalGenerator.cpp  TestSignalGenerator.h
src/recorder/: CMakeLists.txt  InstructionPanel.cpp  InstructionPanel.h  Main.cpp  RecorderComponent.cpp  RecorderComponent.h  RecorderWindow.cpp  RecorderWindow.h  TestSignalGenerator.cpp  TestSignalGenerator.h
